--- a/scss/components/_foot-page.scss
+++ b/scss/components/_foot-page.scss
@@ -3,7 +3,7 @@
     background-color: var(--color-behindpage);
     padding: 0px 0px;
     margin: 0 auto;
-
+}
         
 .footpage__container {
     width: 1200px;
@@ -117,12 +117,11 @@
     padding-left: 10px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     background-color: rgba(255,255,255,0);
-    margin-top: 18px;
+    margin: 18px 12px 0px 0px;
     color: var(--color-hueso);
 }
 
 .subscription-submit {
-    margin-left: 12px;
     width: 200px;
     height: 50px;
     font-weight: 700;
@@ -151,4 +150,50 @@
     color: var(--color-azul);
 }
 
+@media screen and (max-width: 524px) {
+    .footpage {
+        width: 523px;
+    }
+    .footpage__container {
+        width: 523px;
+        height: 603px;
+        padding: 60px 0px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .footpage__generalinfo {
+        margin: 0px;
+        justify-content: center;
+        text-align: center;
+    } 
+    .footpage__find-us {
+        margin: 0px;
+        text-align: center;
+
+        .footpage__social-container {
+            margin: 0px;
+        }
+    }
+    .footpage__subscription {
+        margin: 0px;
+        text-align: center;
+        width: 100%;
+        height: 156px;
+        justify-content: center;
+
+        .subscription__email-box {
+            display: block;
+            margin: 20px 0px;
+            width: 450px;
+        }
+        .subscription__submit-logo {
+            left: -58px;
+            bottom: -6px;
+        }
+    }
+    .footpage__address,
+    .footpage__contact {
+        line-height: none;
+    }
 }
