--- a/scss/components/_foot-page.scss
+++ b/scss/components/_foot-page.scss
@@ -150,12 +150,12 @@
     color: var(--color-azul);
 }
 
-@media screen and (max-width: 524px) {
+@media screen and (max-width: 480px) {
     .footpage {
-        width: 523px;
+        width: 480px;
     }
     .footpage__container {
-        width: 523px;
+        width: 100%;
         height: 603px;
         padding: 60px 0px;
         flex-direction: column;
