almost finish cell responsive

--- a/scss/components/_main-title-estudio.scss
+++ b/scss/components/_main-title-estudio.scss
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-position: center;
     padding: 47px 0px;
+    width: 1600px;
     margin: 0 auto;
 } 
 
@@ -244,13 +245,11 @@ textarea:focus {
         left: 45px;
         bottom: 105px
     }
-    .submit__modal {
-        
-    }
     h1 {
         font-size: 26px;
     }
     .modal__form {
         width: 100%;
     }
+
 }
