--- a/scss/components/_features-estudio.scss
+++ b/scss/components/_features-estudio.scss
@@ -39,6 +39,9 @@
 
 
 @media screen and (max-width: 480px) {
+    .features {
+        width: 480px;
+    }
     .features__cards {
         flex-direction: column;
         width: 450px;
