--- a/scss/components/_main-title-estudio.scss
+++ b/scss/components/_main-title-estudio.scss
@@ -67,7 +67,6 @@ h1 {
 .modal__form {
     background-color: var(--color-hueso);
     width: 528px;
-    height: 581px;
     transition: transform cubic-bezier(0.4, 0, 0.2, 1) .4s;
     opacity: cubic-bezier(0.4, 0, 0.2, 1) .1s;
     transform: translateY(0);
@@ -116,22 +115,20 @@ h1 {
 }
 
 .label__conditions {
+    margin: 20px 0px 20px 0px;
+}
+
+.label__conditions--text {
     color: var(--color-gris);
     font-size: 14px;
     font-weight: 400;
-    display: flex;
     width: 400px;
     height: 24px;
-    position: relative;
-    left: 30px;
     letter-spacing: 0.03em;
     margin: 20px 0px 30px 0px;
 }
 
 .modal__form--checkbox {
-    position: absolute;
-    left: 60px;
-    bottom: 112px;
     width: 16px;
     height: 15px;
     border-color: var(--color-texto);
@@ -209,26 +206,6 @@ textarea:focus {
     border: 1px solid var(--color-azul)
 }
 
-@media screen and (max-width: 768.98px) {
-    .main__title--container {
-        width: 360px;
-    }
-    .label__conditions {
-        margin-top: 30px;
-        left: 10px;
-    }
-    .modal__form--checkbox {
-        left: 45px;
-        bottom: 120px
-    }
-    .submit__modal {
-        left: 150px;
-    }
-    h1 {
-        font-size: 26px;
-    }
-}
-
 @media screen and (max-width: 480px) {
     .main__title {
         width: 480px;
@@ -248,8 +225,4 @@ textarea:focus {
     h1 {
         font-size: 26px;
     }
-    .modal__form {
-        width: 100%;
-    }
-
 }
