--- a/scss/components/_our_team-estudio.scss
+++ b/scss/components/_our_team-estudio.scss
@@ -2,6 +2,7 @@
     background-color: var(--color-behindourteam);
     padding: 47px 0px;
     margin: 0 auto;
+    width: 1600px;
 }
     .our_team__container {
         margin: 0 auto;
