--- a/scss/components/_main-title-estudio.scss
+++ b/scss/components/_main-title-estudio.scss
@@ -48,8 +48,8 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: #00000033;
     top: 0;
     left: 0;
@@ -224,5 +224,8 @@ textarea:focus {
     }
     h1 {
         font-size: 26px;
+    }
+    .modal__form {
+        width: 80%;
     }
 }
