--- a/scss/components/_our_team-estudio.scss
+++ b/scss/components/_our_team-estudio.scss
@@ -83,7 +83,12 @@
         flex-direction: column;
         align-items: center;
     }
+    .card__info {
+        width: 450px;
+        height: 622px;
+    }
     .card__info img {
         width: 100%;
+        height: 100%;
     }
 }
