change display bar

--- a/scss/components/_features-estudio.scss
+++ b/scss/components/_features-estudio.scss
@@ -1,7 +1,7 @@
 .features {
     padding: 47px 0px;
     margin: 0 auto;
-    width: 1600px;
+    width: 100%;
 } 
     .features__cards {
         display: flex;
