--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,9 +3,10 @@
     margin: 0 auto;
     padding: 0px 0px;
     align-items: center;
+    justify-content: center;
     display: flex;
     border-bottom: 1px solid #ECECEC;
-    width: 1600px;
+    width: 100%;
 }
 
         
@@ -14,8 +15,6 @@
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
     align-items: center;
 }
 
