--- a/scss/components/_main-title-estudio.scss
+++ b/scss/components/_main-title-estudio.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-position: center;
     padding: 47px 0px;
-    width: 1600px;
+    width: 100%;
     margin: 0 auto;
 } 
 
