first attempt full width

--- a/scss/components/_features-estudio.scss
+++ b/scss/components/_features-estudio.scss
@@ -1,7 +1,7 @@
 .features {
     padding: 47px 0px;
     margin: 0 auto;
-    width: 100%;
+    width: 1300px;
 } 
     .features__cards {
         display: flex;
