--- a/scss/components/_regular_customers-estudio.scss
+++ b/scss/components/_regular_customers-estudio.scss
@@ -1,7 +1,7 @@
 .regular_customers {
     padding: 47px 0px;
     margin: 0 auto;
-    width: 100%;
+    width: 1300px;
 }
         
 .regular_customers__container {
