--- a/scss/components/_foot-page.scss
+++ b/scss/components/_foot-page.scss
@@ -3,7 +3,7 @@
     background-color: var(--color-behindpage);
     padding: 0px 0px;
     margin: 0 auto;
-    width: 100%;
+    width: 1300px;
 }
         
 .footpage__container {
