--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     display: flex;
     border-bottom: 1px solid #ECECEC;
-    width: 100%;
+    width: 1300px;
 }
 
         
