another width attempt

--- a/scss/components/_main-title-estudio.scss
+++ b/scss/components/_main-title-estudio.scss
@@ -3,8 +3,8 @@
     background-image: url(./image/Imagen\ \(10\).jpg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     padding: 47px 0px;
-    width: 1300px;
     margin: 0 auto;
 } 
 
