--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,10 +3,8 @@
     margin: 0 auto;
     padding: 0px 0px;
     align-items: center;
-    justify-content: center;
     display: flex;
     border-bottom: 1px solid #ECECEC;
-    width: 1300px;
 }
 
         
@@ -15,6 +13,8 @@
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
     align-items: center;
 }
 
