--- a/scss/components/_regular_customers-estudio.scss
+++ b/scss/components/_regular_customers-estudio.scss
@@ -32,7 +32,7 @@
 
 .regular_customers__customerlogo {
     display: flex;
-    margin: 0px;
+    margin: 0px 0px;
     align-items: center;
     stroke: currentColor;
     stroke-width: 0;
