--- a/scss/components/_features-estudio.scss
+++ b/scss/components/_features-estudio.scss
@@ -2,43 +2,42 @@
     padding: 47px 0px;
     margin: 0 auto;
 } 
-    .features__cards {
-        display: flex;
-        margin: 0 auto;
-        width: 1200px;
-        padding: 0px;
-        gap: 30px;
-    }
+.features__cards {
+    display: flex;
+    margin: 0 auto;
+    width: 1200px;
+    padding: 0px;
+    justify-content: space-between;
+}
     
-    .features__card--title {
-        font-weight: 700;
-        line-height: var(--lineweight-normal);
-    }
-    
-    .features__card--text {
-        color: var(--color-gris);
-        line-height: var(--lineweight-normal);
-    }
-    
-    .features__card {
-        width: 270px;
-        flex-basis: calc((100% - 90px) / 4);
-        margin:0px
-    }
-    
-    .features__text--svg {
-        background-color: var(--color-behindourteam) ;
-        width: 100%;
-        height: 120px;
-    }
-    
-    .features__text--svg > use {
-        transform: translateX(100px) translateY(20px);
-    }
+.features__card {
+    width: 270px;
+    margin:0px;
+}
 
+.features__card--title {
+    font-weight: 700;
+    line-height: var(--lineweight-normal);
+    margin: 30px 0px 10px 0px; 
+}
+    
+.features__card--text {
+    color: var(--color-gris);
+    line-height: var(--lineweight-normal);
+    margin: 0px;
+}
+    
+.features__text--svg {
+    background-color: var(--color-behindourteam) ;
+    width: 100%;
+    height: 120px;
+}
+    
+.features__text--svg > use {
+    transform: translateX(100px) translateY(20px);
+}
 
-
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
     .features {
         width: 480px;
     }
@@ -49,6 +48,9 @@
     .features__card {
         width: 450px;
         margin: 0 auto;
+    }
+    .features__card:nth-child(-n + 3) {
+        margin-bottom: 30px;
     }
     .features__text--svg {
         width: 100%;
@@ -63,5 +65,29 @@
     .features__card--title {
         width: 100%;
         text-align: center;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .features {
+        width: 768px;
+    }
+    .features__cards {
+        width: 738px;
+        height: 520px;
+        flex-wrap: wrap;
+    }
+    .features__card {
+        width: 354px;
+        height: 245px;
+    }
+    .features__card:nth-child(-n + 2) {
+        margin-bottom: 30px;
+    }
+    .features__text--svg {
+        width: 100%;
+    }
+    .features__text--svg use {
+     transform: translateX(130px) translateY(20px);
     }
 }
