--- a/scss/components/_our_team-estudio.scss
+++ b/scss/components/_our_team-estudio.scss
@@ -12,7 +12,7 @@
         display: flex;
         margin: 0px;
         padding: 0px;
-        gap: 30px;
+        justify-content: space-between;
     }
     
     .card__info {
@@ -25,7 +25,6 @@
         background-color: var(--color-hueso);
         border-radius: 0px 0px 4px 4px;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        flex-basis: calc((100% - 90px) / 4);
     }
     
     .card__info--name {
@@ -70,7 +69,7 @@
         cursor: pointer;
     }
 
-@media screen and (max-width: 480px) {
+    @media screen and (min-width: 320px) and (max-width: 480px) {
     .our_team {
         width: 480px;
     }
@@ -86,8 +85,35 @@
         width: 450px;
         height: 622px;
     }
+    .card__info:nth-child(-n + 3) {
+        margin-bottom: 30px;
+    }
     .card__info img {
         width: 100%;
-        height: 100%;
+        height: 460px;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .our_team {
+        width: 768px;
+    }
+    .our_team__container {
+        width: 738px;
+    }
+    .our_team__cards {
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    .card__info {
+        width: 354px;
+        height: 536px;
+    }
+    .card__info:nth-child(-n + 2) {
+        margin-bottom: 30px;
+    }
+    .card__info img {
+        width: 100%;
+        height: 374px;
     }
 }
