--- a/scss/components/_regular_customers-estudio.scss
+++ b/scss/components/_regular_customers-estudio.scss
@@ -12,9 +12,9 @@
 
 .regular_customers__customerslist {
     display: flex;
-    gap: 30px;
     padding: 0px;
     margin: 0px;
+    justify-content: space-between;
 }
 
 .regular_customers__customer {
@@ -22,7 +22,6 @@
     height: 81px;
     border: 1px solid var(--color-linkitems);
     border-radius: 4px;
-    flex-basis: calc((100% - 150px) / 6);
 }
 
 .regular_customers__customer:hover {
@@ -41,20 +40,63 @@
     fill: var(--color-linkitems);
 }
 
+.regular_customers__customerlogo use {
+    transform: translateX(55px) translateY(15px);
+}
+
 .regular_customers__customerlogo:hover {
     fill: var(--color-azul);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
     .regular_customers {
         width: 480px;
     }
     .regular_customers__container {
-        width: 100%;
+        width: 450px;
     }
     .regular_customers__customerslist {
         flex-wrap: wrap;
-        justify-content: center;
+    }
+    .regular_customers__customer {
+        width: 210px;
+        height: 92px;
+    }
+    .regular_customers__customer:nth-child(-n + 4) {
+        margin-bottom: 30px;
+    }
+    .regular_customers__customerlogo  {
+        width: 100%;
+        height: 100%;
+    }
+    .regular_customers__customerlogo use {
+        transform: translateX(75px) translateY(20px);
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .regular_customers {
+        width: 768px;
+    }
+    .regular_customers__container {
+        width: 738px;
+    }
+    .regular_customers__customerslist {
+        flex-wrap: wrap;
+    }
+    .regular_customers__customer {
+        width: 226px;
+        height: 92px;
+    }
+    .regular_customers__customer:nth-child(-n + 3) {
+        margin-bottom: 30px;
+    }
+    .regular_customers__customerlogo  {
+        width: 100%;
+        height: 100%;
+    }
+    .regular_customers__customerlogo use {
+        transform: translateX(75px) translateY(20px);
     }
 }
 
