--- a/scss/components/_features-estudio.scss
+++ b/scss/components/_features-estudio.scss
@@ -91,3 +91,53 @@
      transform: translateX(130px) translateY(20px);
     }
 }
+
+// DELETE EL DE ABAJO
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .footpage {
+        width: 480px;
+    }
+    .footpage__container {
+        width: 100%;
+        height: 603px;
+        padding: 60px 0px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .footpage__generalinfo {
+        margin: 0px;
+        justify-content: center;
+        text-align: center;
+
+        .footpage__address,
+        .footpage__contact {
+        line-height: none;
+    }
+    } 
+    .footpage__find-us {
+        margin: 0px;
+        text-align: center;
+
+        .footpage__social-container {
+            margin: 0px;
+        }
+    }
+    .footpage__subscription {
+        margin: 0px;
+        text-align: center;
+        width: 100%;
+        height: 156px;
+        justify-content: center;
+
+        .subscription__email-box {
+            display: block;
+            margin: 20px 0px;
+            width: 450px;
+        }
+        .subscription__submit-logo {
+            left: -58px;
+            bottom: -6px;
+        }
+    }
+}
