--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -165,11 +165,11 @@ nav {
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         padding: 32px;
         background-color: var(--color-hueso);
-        z-index: 999;
+        z-index: 2;
         transform: translateX(100%);
         transition: transform 250ms ease-in-out;
     }
@@ -210,7 +210,7 @@ nav {
         }
     }
     .top__contact--menu_mobile {
-        margin: 170px 0px 0px 0px;
+        margin: 302px 0px 0px 0px;
         padding: 0px;
         display: flex;
         flex-direction: column;
