--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -165,8 +165,8 @@ nav {
         position: fixed;
         top: 0;
         left: 0;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         padding: 32px;
         background-color: var(--color-hueso);
         z-index: 2;
